@@ -1,11 +1,12 @@
 path: "pwa"
-version: "Revision 1"
-date: 2023-02-19
+version: "Revision 2"
+date: 2023-03-08
 noCurtain: false
 noFooter: false
 noHeader: false
 noNavPage: false
 noNavSite: false
+pwaSizeMin: "260 kB"
 head:
   title: "NET-Installer"
   manifest: "pwa.webmanifest"
