@@ -24,7 +24,7 @@
         <a tabindex="0" title="Back" onclick="history.back()">&lt;</a>
       </div>
       <div class="menu leaf" role="menuitem">
-        <a href="#top">Top</a>
+        <a title="Top" href="#top">⇱</a>
       </div>
       <div class="menu leaf" role="menuitem">
         <a tabindex="0" title="Forward" onclick="history.forward()">&gt;</a>
