@@ -7,4 +7,8 @@
 <summary><h3>Media</h3></summary>
 {%include_relative _sections/sections/media.html-%}
 </details>
+<details>
+<summary><h3>Frame</h3></summary>
+{%include_relative _sections/sections/frame.html-%}
+</details>
 </form>
