@@ -14,7 +14,7 @@
       </div>
       <div class="una-menu hr"></div>
       <div class="una-menu leaf" tabindex="0">
-        <div class="una-menu item" id="menuitem-pwa">
+        <div class="una-menu item" id="menuitem-application-pwa">
           <div class="una-menu icon">✈</div>
           <label>Offline Access</label>
         </div>
@@ -28,22 +28,28 @@
     </div>
     <div class="una-menu stem" tabindex="0">
       <div class="una-menu leaf" tabindex="0">
-        <div class="una-menu item" id="menuitem-load">
+        <div class="una-menu item" id="menuitem-file-load">
           <div class="una-menu icon">📂</div>
           <label>Load…</label>
         </div>
       </div>
       <div class="una-menu leaf" tabindex="0">
-        <div class="una-menu item" id="menuitem-eject">
-          <div class="una-menu icon">⏏</div>
-          <label>Eject</label>
+        <div class="una-menu item" id="menuitem-file-load-url">
+          <div class="una-menu icon"></div>
+          <label>Load URL…</label>
+        </div>
+      </div>
+      <div class="una-menu leaf" tabindex="0">
+        <div class="una-menu item" id="menuitem-file-properties">
+          <div class="una-menu icon">🏷️</div>
+          <label>Properties</label>
         </div>
       </div>
       <div class="una-menu hr"></div>
       <div class="una-menu leaf" tabindex="0">
-        <div class="una-menu item" id="menuitem-properties">
-          <div class="una-menu icon">🏷️</div>
-          <label>Properties</label>
+        <div class="una-menu item" id="menuitem-file-eject">
+          <div class="una-menu icon">⏏</div>
+          <label>Eject</label>
         </div>
       </div>
     </div>
