@@ -1,6 +1,6 @@
 <div id="output">
-<iframe id="output-frame"></iframe>
-<img id="output-image" />
+<iframe id="output-frame" referrerpolicy="no-referrer"></iframe>
+<img id="output-image" src="{{pathIcon}}" />
 <audio id="output-audio" controls>Audio not supported.</audio>
 <video id="output-video" controls>Video not supported.</video>
 <div id="output-text"></div>
