@@ -1,0 +1,17 @@
+<section>
+  <div class="field switch" id="field-frame-solid">
+    <div class="input">
+      <input id="input-frame-solid" type="checkbox" />
+    </div>
+    <label for="input-frame-solid">Solid background</label>
+  </div>
+  <p>Sets a solid white background for HTML documents that do not define their
+own.</p>
+</section>
+<section>
+  <div class="field row space-between" id="field-frame-reset">
+    <div class="input short">
+      <button id="button-frame-reset" type="button">Reset</button>
+    </div>
+  </div>
+</section>
