@@ -29,10 +29,10 @@
   <div class="field row" id="field-media-search">
     <label>Search:</label>
     <div class="input short">
-      <button id="button-search-n05" type="button">⏪&#xFE0E; −05 s</button>
-      <button id="button-search-p05" type="button">+05 s ⏩&#xFE0E;</button>
-      <button id="button-search-n20" type="button">⏪&#xFE0E; −20 s</button>
-      <button id="button-search-p20" type="button">+20 s ⏩&#xFE0E;</button>
+      <button id="button-media-search-n05" type="button">⏪&#xFE0E; −05 s</button>
+      <button id="button-media-search-p05" type="button">+05 s ⏩&#xFE0E;</button>
+      <button id="button-media-search-n20" type="button">⏪&#xFE0E; −20 s</button>
+      <button id="button-media-search-p20" type="button">+20 s ⏩&#xFE0E;</button>
     </div>
   </div>
 </section>
