@@ -7,7 +7,7 @@ key: "_home"
 <link rel="stylesheet" href="{{sitePathRes}}/styles/una-menu.css" />
 <link rel="stylesheet" href="res/styles/view.css" />
 <link rel="stylesheet" href="res/styles/viewer.css" />
-<script defer type="module" src="res/scripts/main.js"></script>
+<script type="module" src="res/scripts/main.js"></script>
 <section>
 {%include_relative _sections/menu.html-%}
 </section>
