@@ -13,11 +13,11 @@ layout: "document"
   <p>Our service worker is a cache server. On registration, it downloads all
 resources into a persistent storage and serves them locally, downloading lost
 ones as needed. You can bypass the service worker with a forced reload.</p>
-  <p>At least ~250 kB of disk space is required.</p>
+  <p>At least ~{{pageData.pwaSizeMin}} of disk space is required.</p>
   <form>
     <fieldset>
       <div class="field row">
-        <label for="version">Cache name:</label>
+        <label for="string">Cache name:</label>
         <div class="input fluid">
           <output id="string"></output>
         </div>
