@@ -4,9 +4,11 @@
  * Start here.
  */
 
-import { loadView } from "./application-functions.mjs";
+import { loadView, getMenuEntry } from "./application-functions.mjs";
 import { setupEvents } from "./events.mjs";
 import { reset, update, getEntries } from "./common/application-functions.mjs";
+
+const parameters = new URLSearchParams(location.search);
 
 setupEvents();
 Object.values(getEntries())
@@ -15,5 +17,14 @@ Object.values(getEntries())
     entry.element.placeholder = entry.preset;
   });
 reset();
+if (parameters.has("controls")) {
+  getMenuEntry("viewControls").value = true;
+}
+if (parameters.has("dark")) {
+  getMenuEntry("viewForceDark").value = true;
+}
+if (parameters.has("ecc")) {
+  getMenuEntry("ecc").value = true;
+}
 update();
 loadView("nul");
