@@ -75,7 +75,12 @@
 }
 
 #output-frame {
+  /* firefox */
   border: unset;
+}
+
+#output-frame.solid {
+  background-color: #fff;
 }
 
 #output-nul,
